# czytacz

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
alembic/: env.py
alembic/versions/: 023bd05754af_cascade_deletes.py  0853c44fb4ff_initial_tables.py  44191d13db28_add_read_status.py  4f1d5195882c_add_fetch_metadata.py  7846e4e5fb8e_add_a_last_updated_field.py  ba5acdf00097_feed_items.py
czytacz/: __init__.py  cli.py  crud.py  database.py  dependencies.py  feeds.py  fetcher.py  main.py  models.py  schemas.py  settings.py  tasks.py
czytacz/api/: __init__.py  authentication.py  crud.py
czytacz/api/routers/: authentication.py  feeds.py
samples/: nu.rss  tweakers.rss
scripts/: start-api.sh  start-worker.sh
