[tool.poetry]
name = "czytacz"
version = "0.1.0"
description = ""
authors = ["ModZero <modzero@modzero.xyz>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
psycopg = {extras = ["binary"], version = "^3.1.13"}
sqlalchemy = "^2.0.23"
argon2-cffi = "^23.1.0"
alembic = "^1.12.1"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
